fixed the overflow issue where the background color wouldn't extend when an overflow occured; also added an announcment section

--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,9 @@ nav svg {
 }
 
 /*Project Cards*/
-.project-section {
+.project-section,
+.announcement-section,
+.trending-section {
   display: flex;
   flex-direction: column;
   gap: 1em;
@@ -259,4 +261,50 @@ nav svg {
   cursor: pointer;
   width: 1.5em;
   height: 1.5em;
+}
+.announcement-container {
+  overflow-y: scroll;
+}
+
+/*Announcment container*/
+.announcement-container,
+.trending-container {
+  padding: 1.5em;
+  display: grid;
+  gap: 1em;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 2px 3px 5px var(--tertiary-color);
+}
+
+.announcement-item {
+  display: grid;
+  gap: 0.2em;
+}
+
+.announcement-title,
+.trending-username {
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+
+.announcement-desc {
+  color: #626262;
+  font-size: 0.8rem;
+}
+
+.announcement-container hr {
+  border: 1px solid #b5b5b5;
+}
+
+.project-section {
+  grid-area: 1/1/3/2;
+}
+
+.announcement-section {
+  grid-area: 1/2/2/3;
+}
+
+.trending-section {
+  grid-area: 2/2/3/3;
 }
